Fix Pet Enums, finished Adoption controller